# ssh-ui

./: .editorconfig  .gitignore  README.md  meson.build
data/: assets.gresource.xml  gschema.xml  meson.build
meson/: post_install.py
src/: Application.vala  Main.vala  meson.build
src/widgets/: HeaderBar.vala  Window.vala
src/widgets/utils/: Settings.vala
